--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,10 @@
 {{ partial "header.html" . }}
 	
 {{ partial "preloader.html" . }}
-	    
-{{ partial "hero-area.html" . }}
 
 {{ partial "navigation.html" . }}
+	    
+{{ partial "hero-area.html" . }}
 
 {{ partial "about.html" . }}
 
@@ -12,7 +12,9 @@
 
 {{ partial "blog.html" . }}
 
-{{ partial "pricing.html" . }}
+{{ partial "testimonial.html" . }}
+
+<!-- {{ partial "pricing.html" . }}
 
 {{ partial "service.html" . }}
 	
@@ -20,11 +22,11 @@
 
 {{ partial "portfolio.html" . }}
 
-{{ partial "counter.html" . }}
+{{ partial "counter.html" . }} -->
 
 {{ partial "team.html" . }}
 
-{{ partial "testimonial.html" . }}
+<!-- {{ partial "testimonial.html" . }} -->
 		
 {{ partial "contact.html" . }}
 
