--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -2,15 +2,26 @@
 {{"<!-- Welcome Slider-->" | safeHTML}}
 <section class="hero-area" style='background-image: url("{{ .Site.Params.banner.bgImage | absURL }}");'>
     <div class="block">
-        <div class="video-button">
-           {{with .Site.Params.banner.icon}} <i class="{{ . }}"></i> {{ end }}
-        </div>
-       {{with .Site.Params.banner.heading}} <h1 style="font-size:3em">{{ . }}</h1>{{ end }}
-       {{with .Site.Params.banner.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
+       {{with .Site.Params.banner.heading}} <h1 style="font-size:3em;">{{ . }}</h1>{{ end }}
+       {{with .Site.Params.banner.content}} <p style='text-align: left'>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
        {{ if .Site.Params.banner.btn}}
         <a data-scroll href="{{ .Site.Params.banner.btnURL}}" class="btn btn-transparent">{{ .Site.Params.banner.btnText}}</a>
         {{ end }}
     </div>
+    <div class="block" style='visibility: hidden;'>
+        {{with .Site.Params.banner.heading}} <h1 style="font-size:3em;">{{ . }}</h1>{{ end }}
+        {{with .Site.Params.banner.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
+        {{ if .Site.Params.banner.btn}}
+         <a data-scroll href="{{ .Site.Params.banner.btnURL}}" class="btn btn-transparent">{{ .Site.Params.banner.btnText}}</a>
+         {{ end }}
+     </div>
+     <!-- <div class="block" style='visibility: hidden;'>
+        {{with .Site.Params.banner.heading}} <h1 style="font-size:3em;">{{ . }}</h1>{{ end }}
+        {{with .Site.Params.banner.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
+        {{ if .Site.Params.banner.btn}}
+         <a data-scroll href="{{ .Site.Params.banner.btnURL}}" class="btn btn-transparent">{{ .Site.Params.banner.btnText}}</a>
+         {{ end }}
+     </div> -->
 </section>
 {{"<!-- /Welcome Slider-->" | safeHTML}}
 {{end}}
