--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -27,7 +27,7 @@
 
             {{"<!-- Contact Form -->" | safeHTML}}
             <div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                <form name="contact-form" action="https://formspree.io/contact@sidetracked.dk" method="POST" role="form">
+                <form name="contact-form" action="https://formspree.io/hi@sidetracked.dk" method="POST" role="form">
 
                     <div class="form-group">
                         <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
