Change contact form and details

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -11,22 +11,9 @@
             </div>
             {{"<!-- /section title -->" | safeHTML}}
 
-            {{"<!-- Contact Details -->" | safeHTML}}
-            <div class="contact-info col-md-6 wow fadeInUp" data-wow-duration="500ms">
-                {{ with .Site.Data.contact.title }}<h3>{{ . }}</h3> {{ end }}
-                {{ with .Site.Data.contact.content }} <p> {{ . }} </p> {{ end }}
-                <div class="contact-details">
-                    {{ range .Site.Data.contact.contactDetails }}
-                    <div class="con-info clearfix">
-                        <i class="{{ .icon }}"></i>
-                        <span>{{ .info }}</span>
-                    </div>
-                    {{ end }}
-                </div>
-            </div>
-
+            
             {{"<!-- Contact Form -->" | safeHTML}}
-            <div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
+            <div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms">
                 <form name="contact-form" action="https://formspree.io/hi@sidetracked.dk" method="POST" role="form">
 
                     <div class="form-group">
@@ -45,14 +32,6 @@
                         <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
                     </div>
 
-                    <div id="mail-success" class="success">
-                        Thank you. The Mailman is on His Way :)
-                    </div>
-
-                    <div id="mail-fail" class="error">
-                        Sorry, don't know what happened. Try later :(
-                    </div>
-
                     <div id="cf-submit">
                         <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
                     </div>
@@ -60,16 +39,24 @@
                 </form>
             </div>
 
+            {{"<!-- Contact Details -->" | safeHTML}}
+            <div class="contact-info col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
+                {{ with .Site.Data.contact.title }}<h3>{{ . }}</h3> {{ end }}
+                {{ with .Site.Data.contact.content }} <p> {{ . }} </p> {{ end }}
+                <div class="contact-details">
+                    {{ range .Site.Data.contact.contactDetails }}
+                    <div class="con-info clearfix">
+                        <i class="{{ .icon }}"></i>
+                        <span>{{ .info }}</span>
+                    </div>
+                    {{ end }}
+                </div>
+            </div>
+
         </div>
     </div>
 
-    {{ if .Site.Data.contact.enable_maps }}
-    {{"<!-- Google Map -->" | safeHTML}}
-    <div class="google-map">
-        <div id="map-canvas" {{ with .Site.Data.contact.mapLatitude }} data-latitude="{{ . }}" {{ end }} 
-        {{ with .Site.Data.contact.mapLongitude }} data-longitude="{{ . }}" {{ end }}></div>
-    </div>
-    {{ end }}
+
 
 </section>
 {{"<!-- /contact -->" | safeHTML}}
