--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
 
 {{ partial "blog.html" . }}
 
-{{ partial "testimonial.html" . }}
+<!-- {{ partial "testimonial.html" . }} -->
 
 <!-- {{ partial "pricing.html" . }}
 
