--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -7,6 +7,7 @@
             <div class="title text-center wow fadeIn" data-wow-duration="1500ms">
                 <h2>{{ .Site.Data.about.heading}} <span class="color">{{ .Site.Data.about.headingSpan}}</span> </h2>
                 <div class="border"></div>
+                <h4>{{ .Site.Data.about.subtitle}} <span class="color">{{ .Site.Data.about.productName}}</span> </h4>
             </div>
             {{"<!-- /section title -->" | safeHTML}}
 
