--- a/static/css/style.css
+++ b/static/css/style.css
@@ -701,6 +701,73 @@ a:hover {
   z-index: -1;
 }
 
+.hero-area-arrow a {
+  position: absolute;
+  bottom: 55px;
+  left: 50%;
+}
+
+.hero-area-arrow a:hover {
+  opacity: .25;
+}
+
+#arrow a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #57cbcc;
+  border-bottom: 1px solid #57cbcc;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb07 2s infinite;
+  animation: sdb07 2s infinite;
+  opacity: 0;
+  box-sizing: border-box;
+}
+
+#arrow a span:nth-of-type(1) {
+  -webkit-animation-delay: 4s;
+  animation-delay: 4s;
+}
+
+#arrow a span:nth-of-type(2) {
+  top: 10px;
+  -webkit-animation-delay: 4.15s;
+  animation-delay: 4.15s;
+}
+#arrow a span:nth-of-type(3) {
+  top: 20px;
+  -webkit-animation-delay: 4.3s;
+  animation-delay: 4.3s;
+}
+
+@-webkit-keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 /*=================================================================
   About us section
 ==================================================================*/
