signup form links to mailchimp form

--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -12,7 +12,8 @@
                         {{with .Site.Params.banner.heading}} <h1 style="font-size:3em;">{{ . }}</h1>{{ end }}
                         {{with .Site.Params.banner.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
                         {{ if .Site.Params.banner.btn}}
-                            <a data-scroll href="{{ .Site.Params.banner.btnURL}}" class="btn btn-transparent" id="landingpage-submit">{{ .Site.Params.banner.btnText}}</a>
+                            <a data-scroll href="{{ .Site.Params.cta.signupLink}}" class="btn btn-transparent" id="landingpage-submit">{{ .Site.Params.banner.btnText}}</a>
+                   
                         {{ end }}
                 </div>
         </div>
