--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -8,12 +8,11 @@
                {{ with .Site.Params.cta.content }} <p>{{ . }}</p> {{ end }}
 
                <div class="cta-form">
-                <form id="cta-form" role="form">
+                 <form id="cta-form" role="form">
                     <div id="cta-cf-submit">
-                        <button id="cta-submit" class="btn btn-transparent">{{ with .Site.Params.cta.btnText }} {{ . }} {{end}}</button>
+                        <a id="cta-submit" type="submit" class="btn btn-transparent" href="{{.Site.Params.cta.signupLink}}">{{.Site.Params.cta.btnText }}</a>
                     </div>
-
-                </form>
+                 </form>
                </div>
             </div>
         </div>
