--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -1,6 +1,6 @@
 {{ if .Site.Params.banner.enable }}
 {{"<!-- Welcome Slider-->" | safeHTML}}
-<section class="hero-area" style='background-image: url("{{ .Site.Params.banner.bgImage | absURL }}");'>
+<section class="hero-area" >
     {{"<!-- logo -->" | safeHTML}}
     <!-- <a class="hero-area-logo" href="{{ .Site.BaseURL | absURL }}">
         <img src="{{ .Site.Params.logo | absURL }}" alt="Logo" />
