--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,9 +20,9 @@
 					</a>
 					<br>
 
-					<p>Design And Developed by <a href="{{ .Site.Params.footer.copyrightURL | absURL }}"> {{ with .Site.Params.footer.copyright }} {{ . }} {{ end }} </a>. Copyright &copy; <script>
+					<p>Copyright &copy; <script>
 							document.write(new Date().getFullYear())
-						</script>. All Rights Reserved.</p>
+						</script> {{ .Site.Params.footer.copyright }}. All Rights Reserved.</p>
 				</div>
 			</div>
 		</div>
