--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -7,15 +7,17 @@
     </a> -->
     <div class="container">
         <div class="row">
-                <div class="hero-info col-md-6">
-                        {{with .Site.Params.banner.subtitle}} <h2>{{ . }}</h2>{{ end }}
-                        {{with .Site.Params.banner.heading}} <h1 style="font-size:2.5em;">{{ . }}</h1>{{ end }}
-                        {{with .Site.Params.banner.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
-                        {{ if .Site.Params.banner.btn}}
-                            <a data-scroll href="{{ .Site.Params.cta.signupLink}}" class="btn btn-transparent" id="landingpage-submit">{{ .Site.Params.banner.btnText}}</a>
-                   
-                        {{ end }}
-                </div>
+            <div class="hero-header">
+            {{with .Site.Params.banner.heading}} <h1>{{ . }}</h1>{{ end }}
+            {{with .Site.Params.banner.subtitle}} <h2>{{ . }}</h2>{{ end }}
+            </div>
+            <div class="hero-info col-md-6">
+                    {{with .Site.Params.banner.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
+                    {{ if .Site.Params.banner.btn}}
+                        <a data-scroll href="{{ .Site.Params.cta.signupLink}}" class="btn btn-transparent" id="landingpage-submit">{{ .Site.Params.banner.btnText}}</a>
+               
+                    {{ end }}
+            </div>
         </div>
     </div>
 </section>
