--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,14 +1,20 @@
 {{ partial "header.html" . }}
 
 {{ if .Site.Params.notfound.enable }}
-{{"<!-- 404 Slider-->" | safeHTML}}
+{{"<!-- Welcome Slider-->" | safeHTML}}
 <section class="hero-area" style='background-image: url("{{ .Site.Params.notfound.bgImage | absURL }}"); '>
-    <div class="block">
-       {{with .Site.Params.notfound.heading}} <h1>{{ . }}</h1>{{ end }}
-       {{with .Site.Params.notfound.content}} <p>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
-       {{ if .Site.Params.notfound.btn}}
-        <a data-scroll href="{{ .Site.Params.notfound.btnURL}}" class="btn btn-transparent">{{ .Site.Params.notfound.btnText}}</a>
-        {{ end }}
+    <div class="container">
+        <div class="row">
+            <div class="hero-header"  style='margin-top: 0em;'>
+                {{with .Site.Params.notfound.heading}} <h1>{{ . }}</h1>{{ end }}
+            </div>
+            <div class="hero-info col-md-12">
+                {{with .Site.Params.notfound.content}} <p style='text-align: center;'>{{ replace . "\n" "<br/>" | safeHTML }}</p> {{ end }}
+                {{ if .Site.Params.notfound.btn}}
+                <a data-scroll href="{{ .Site.Params.notfound.btnURL}}" class="btn btn-transparent">{{ .Site.Params.notfound.btnText}}</a>
+                {{ end }}
+            </div>
+        </div>
     </div>
 </section>
 {{"<!-- /404 Slider-->" | safeHTML}}
