Open CTA button link in new tab

--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -10,7 +10,7 @@
                <div class="cta-form">
                  <form id="cta-form" role="form">
                     <div id="cta-cf-submit">
-                        <a id="cta-submit" type="submit" class="btn btn-transparent" href="{{.Site.Params.cta.signupLink}}">{{.Site.Params.cta.btnText }}</a>
+                        <a id="cta-submit" type="submit" class="btn btn-transparent" href="{{.Site.Params.cta.signupLink}}" target="_blank">{{.Site.Params.cta.btnText }}</a>
                     </div>
                  </form>
                </div>
